--- a/sass/_inbox.scss
+++ b/sass/_inbox.scss
@@ -82,6 +82,8 @@
    }
 }
 
+.messageDisplay .inbox-card {}
+
 .messageDisplay {
    width: 50%;
    height: 70%;
@@ -90,7 +92,10 @@
 
    .inbox-card {
       width: 100%;
+      height: 100%;
       margin-top: 5rem;
+      overflow-y: scroll;
+      overflow-x: hidden;
 
       .user-inbox_tab-name {
          font-size: 2rem;
@@ -363,6 +368,7 @@
 
 }
 
+.messageDisplay .inbox-card::-webkit-scrollbar,
 .chats::-webkit-scrollbar,
 textarea::-webkit-scrollbar {
    margin-right: 2rem;
@@ -370,6 +376,7 @@ textarea::-webkit-scrollbar {
    background-color: $color-secondary-light;
 }
 
+.messageDisplay .inbox-card::-webkit-scrollbar-thumb,
 .chats::-webkit-scrollbar-thumb,
 textarea::-webkit-scrollbar-thumb {
    background-color: $color-grey-dark-1;
@@ -377,6 +384,7 @@ textarea::-webkit-scrollbar-thumb {
    margin: 10px;
 }
 
+.messageDisplay .inbox-card::-webkit-scrollbar-track:hover,
 .chats::-webkit-scrollbar-track:hover,
 textarea::-webkit-scrollbar-track:hover {
    background-color: #c0d0e9;
